# mbRole

./: .gitignore  README.md  main.py  pyproject.toml
data/: P450-inhibitor.txt  chebi-refrigerant.txt  chebi-solvent.txt
mbrole/: __init__.py  annotation.py  arg_parse.py  cli.py  functional_enrichment.py
scripts/: CTD-to-sqlite.py  LMSD.py  SPMDB.py  chebi-to-sqlite.py  clipgx-to-csv.py  clipgx.py  hmdb-to-sqlite.py  kegg-compound-to-sqlite.py  kegg-organism-backgrounds.py  reactome-to-sqlite.py  split-hmdb-xml.py  wikipathways-to-csv.py  ymdb-to-sqlite.py
tests/: functional_enrichment_test.py
