[project]
name = "mbrole-cli"
version = "0.1.0"
description = "A command line implementation of mbrole (Metabolites Biological Role)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[project.scripts]
mbrole-cli="mbrole.cli:main"

[project.urls]
Homepage = "https://github.com/Fabian-RY/mbRole"
Issues = "https://github.com/Fabian-RY/mbRole/issues"
